--- a/portfolio/portfolio_2018/virtual_reality.html
+++ b/portfolio/portfolio_2018/virtual_reality.html
@@ -6,8 +6,8 @@
   <title>Jar Hsuan Wang's portfolio</title>
 
   <link href="css/normalize.min.css" rel="stylesheet">
-  <link href="css/portfolio_main.min.css" rel="stylesheet">
-  <link href="css/portfolio_flexbox.min.css" rel="stylesheet">
+  <link href="css/portfolio_main.css" rel="stylesheet">
+  <link href="css/portfolio_flexbox.css" rel="stylesheet">
 
   <!-- for reading -->
   <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
@@ -33,13 +33,13 @@
 
       <div class="overview-item">
         <h1 class="project-title">&rsaquo; VRVR Golf</h1>
-        <h2 class="project-name overview-accent-color-two">Virtual Reality Experience</h2>
+        <h2 class="project-name overview-accent-color-three">Virtual Reality Experience</h2>
         <h3 class="overview-subtitle">Role</h3>
         <p  class="overview-description">designer and user researcher</p>
       </div>
 
       <div class="overview-item">
-        <img src="image/gamePro.jpg" class="overview-image-item" alt="a photo of the group on the day of showcase">
+        <img src="image/VR.png" class="overview-image-item" alt="a photo of the group on the day of showcase">
       </div>
     </div>
   </section>
