--- a/portfolio/jhw_portfolio/virtual_reality.html
+++ b/portfolio/jhw_portfolio/virtual_reality.html
@@ -1,100 +1,119 @@
-  <!DOCTYPE html>
-  <html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="device-width, initial-scale = 1">
-    <title>Jar Hsuan Wang's portfolio</title>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="device-width, initial-scale = 1">
+  <title>Jar Hsuan Wang's portfolio</title>
 
-    <link href="css/normalize.min.css" rel="stylesheet">
-    <link href="css/portfolio_main.css" rel="stylesheet">
-    <link href="css/portfolio_flexbox.css" rel="stylesheet">
+  <link href="css/normalize.min.css" rel="stylesheet">
+  <link href="css/portfolio_main.css" rel="stylesheet">
+  <link href="css/portfolio_flexbox.css" rel="stylesheet">
 
-    <!-- for reading -->
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Amiri" rel="stylesheet">
+  <!-- for reading -->
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Amiri" rel="stylesheet">
 
-    <!-- for nav -->
-    <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
-  </head>
+  <!-- for nav -->
+  <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+</head>
 
-  <body>
+<body>
 
-    <nav class="nav-in-project-detail">
-      <ul class="nav-container">
-        <li  class="nav-logo"><a href="portfolio.html" class="nav-logo-item nav-link">Jar Hsuan Wang</a> </li>
+  <nav class="nav-in-project-detail">
+    <ul class="nav-container">
+      <li  class="nav-logo"><a href="portfolio.html" class="nav-logo-item nav-link">Jar Hsuan Wang</a> </li>
 
-        <li><a class="main-nav-accent-one nav-link" href="about.html">ABOUT ME</a></li>
-        <li><a class="main-nav-accent-two nav-link" href="project_display.html">PROJECTS</a></li>
-      </ul>
-    </nav>
+      <li><a class="main-nav-accent-one nav-link" href="about.html">ABOUT ME</a></li>
+      <li><a class="main-nav-accent-two nav-link" href="project_display.html">PROJECTS</a></li>
+    </ul>
+  </nav>
 
-    <section class="preview-section-container">
-      <div class="overview-image-container">
+  <section class="preview-section-container">
+    <div class="overview-video">
 
-        <div class="overview-item">
-          <h1 class="project-title">&rsaquo; VRVR Golf</h1>
-          <h2 class="project-name overview-accent-color-three">Virtual Reality Trialer</h2>
-          <h3 class="overview-subtitle">Role</h3>
-          <p  class="overview-description">Videographer</p>
-        </div>
+      <div class= "overview-vid-item">
+        <h1 class="project-title-vid">&rsaquo; VR Trailer </h1>
+        <h2 class="project-name-vid overview-accent-color-one">VRVR Golf</h2>
+        <h3 class="overview-subtitle">Role</h3>
+        <p  class="overview-description">Videographor</p>
+      </div>
 
-        <div class="overview-item">
-          <img src="image/VR.png" class="overview-image-item" alt="a photo of the group on the day of showcase">
+      <div class="video-container overview-vid-item">
+        <div class="videowrapper">
+          <iframe width="560" height="315" src="https://www.youtube.com/embed/wt5-bP0UbOM"></iframe>
         </div>
       </div>
-    </section>
+    </div>
+  </section>
+
+  <section>
+    <!-- overview-accent-color-one -->
+    <h2 class="project-section-title">Overview</h2>
+
+    <h3 class="project-paragraph in-para-overview-title">Goal</h3>
+    <p  class="project-paragraph">Developing a game VR game trailer that showcase the feature of the VR game.</p>
+    <h3 class="project-paragraph in-para-overview-title">Teammates</h3>
+    <p  class="project-paragraph">Tamiko Tadeo, Kenny Cheung and Liah Castillo</p>
+    <h3 class="project-paragraph in-para-overview-title">Time</h3>
+    <p  class="project-paragraph">5 days</p>
+    <h3 class="project-paragraph in-para-overview-title">Other Goals</h3>
+    <p  class="project-paragraph">Creating a casual VR golf game for people to relax themselves and experience futuristic golfing experience.</p>
+    <h3 class="project-paragraph in-para-overview-title">Other Roles</h3>
+    <p  class="project-paragraph">sub environmental designer, asset modeller and user researcher.</p>
 
 
-    <section>
-      <h2  class="project-section-title first-paragraph first-title">Overview</h2>
-      <h3  class="project-paragraph in-para-overview-title">Goal</h3>
-      <p class="project-paragraph ">Developing a game VR game trailer that showcase the feature of the VR game.</p>
-        <h3 class="project-paragraph in-para-overview-title">Teammates</h3>
-        <p class="project-paragraph ">Tamiko Tadeo, Kenny Cheung and Liah Castillo</p>
-        <h3 class="project-paragraph in-para-overview-title">Time</h3>
-        <p class="project-paragraph ">5 days</p>
-        <h3  class="project-paragraph in-para-overview-title">Other Goals</h3>
-        <p class="project-paragraph ">Creating a casual VR golf game for people to relax themselves and experience futuristic golfing experience in 3.5 months.</p>
-        <h3  class="project-paragraph in-para-overview-title">Other Roles</h3>
-        <p class="project-paragraph ">sub environmental designer, asset modeller and user researcher.</p>
+    <h2 class="project-section-title">Brief</h2>
+    <p class="project-paragraph first-paragraph">This was a school project for IAT 344, “Moving Images” where students were assigned to collaborate with real world clients and help them produce documentaries. Our group chose to work with the Museum of Vancouver. </p>
+
+    <p class="project-paragraph"><em>The Wild Things</em> will be on display in late 2018 and will illustrate the positive relationship between human, technology and nature. After listening to the museum’s proposed concept, my team were interested in the opportunity to document the historical and cultural relationships between human and nature. Thus, we decided to film a documentary project on this topic. </p>
+
+    <h2 class="project-section-title">Process</h2>
+    <p class="project-paragraph">Different from a scripted film, making a documentary requires a lot more planning due to the unpredictability of the filming location and content. In order to minimize the uncertainty, my team decided to schedule a museum tour to get familiarize what could be our centre of attention. Before visiting the museum, I led my team in a brainstorming process where we created a set of moodboards, possible documentary composition, pre-production questions and colour palettes that could prepare us to envision the story messages and goals. The idea of “the coexistence of both nature and urbanization” came into mind at this stage of the process which led us to have more spaces to discuss with the museum. </p>
+
+    <figure>
+      <img src="image/team_meeting.jpg" class="project-image" alt="a photo of our very first team meeting">
+      <figCaption>This is a photo of the team trying to do the very first research about the topic.</figCaption>
+    </figure>
+
+    <p class="project-paragraph">After visiting the museum and meeting with the museum curator, Viviane Gosslin, we were assigned taxidermy as a topic, due to the fact that there are fewer taxidermists than in the past. Thus,it would be valuable to document how people used to connect themselves to the nature and how taxidermy could be important in modern day context. In order to capture the positive message that the museum wanted us to portray, I led the group in creating guiding  questions for our upcoming interviews. How these questions were significant was that they helped us to form a cohesive message later on. At this stage, my team developed an overall message of an introduction to taxidermy and its values. </p>
+
+    <p class="project-paragraph">Moreover after my team had determined our list of questions, I began storyboarding our documentary. By doing this, it helped my team to understand how we could set up the equipment quickly and film the subjects with purposes. Since on the storyboard, there were annotation that reminded each of us to capture artefacts that could help building our topic. After the pre-production preparation, we then went to the museum to film. </p>
+
+    <p class="project-paragraph">Since the museum could only offer us up to 3 hours for filming in their storage room, we were only able to gather our footage into a rough cut during our first filming. Given our lack of footage, we request a second shooting time with the museum. I provided our shooting plan, consisting of potential artifacts that we could use to convey our desired message. I also provided our list of equipment that would help enhance the flow and composition of our film. In order to prevent accidents and uncertainty, I studied and practiced how to use the new equipment beforehand and coached the team to use them. </p>
+
+    <figure>
+      <img src="image/bw_note.png" class="project-image" alt="a photo of my shot list">
+      <figCaption>A photo of the guiding list that I used to remind the team what to focus on.</figCaption>
+    </figure>
+
+    <figure>
+      <img src="image/guiding_where_to_film.jpg" class="project-image" alt="a photo of my teammate, Justine, trying to capture some potential shots for our film">
+      <figCaption>A photo of my teammate, Justine, being reminded to capture some potential shots using the new equipment, glide cam.</figCaption>
+    </figure>
+
+    <h2 class="project-section-title">Challenge</h2>
+    <p class="project-paragraph">I was responsible for post production (for example: colour correction and ensuring coherent content) while my teammates were in charge of editing and sound design.The challenge that we faced is that it was difficult for us to cut down the interview content and arrange them in a meaningful way. There were technical issues, for instance, cameras running out of batteries and dirty lens influencing the film quality that affect the amount of footages we could use. How we tried to tackle this issue was that we took a step back and re-watching all the salvageable footages and tried to arrange them following the guiding the questions that we had. We later on filled in the gap using the footages we shot during the second filming. Hence, this situation further emphasized the importance of pre-production preparation. </p>
+
+    <figure>
+      <img src="image/double_checking_composition.jpg" class="project-image" alt="a photo of second shooting">
+      <figCaption>This is a photo of me making sure the quality of the footages to reduce further post-production issues.</figCaption>
+    </figure>
+
+    <h2 class="project-section-title">Reflection</h2>
+    <p class="project-paragraph">The first screening of the documentary was played in School of Interactive Art and Technology Festival in Yaletown Roundhouse community centre. It would later on be played in the museum for the exhibition. </p>
+
+    <figure>
+      <img src="image/showcase.jpg" class="project-image small-image" alt="a photo of the group on the day of showcase">
+      <figCaption>This is a group picture during the first screening showcase.</figCaption>
+    </figure>
+
+    <p class="project-paragraph">What I have learnt from the project is the importance of pre-production preparation since it is very crucial for my team to respond quickly according to the unpredictable circumstances that might happen during shooting and editing. Unpredictability indeed gave my team a lot of stress. After this project, I had learnt to be more flexible and understanding when facing technical issues, scheduling issues and team conflicts. </p>
+  </section>
 
 
-        <h2 class="project-section-title">Brief</h2>
-        <p class="project-paragraph first-paragraph">This project was given as a school project in the business course, <em>Introduction to Entrepreneurship and Innovation</em>. The course itself encouraged interdisciplinary collaboration so most of students participated in the course were from different majors. This context allowed me to work with people who had zero design background. Hence, as a designer, I would have to communicate and convince a group of lay audience about basic understanding of design and technological tools. </p>
-        <p class="project-paragraph">For this project specifically, the goal was to propose an entrepreneurial solution to a social issue that we considered was important enough. Due to all of our team members including me coming from diverse backgrounds and I was once an international student peer mentor, I advocated to promote international students’ experience in school. So at the end, the team agreed to tackle international/ immigrant student issues such as social isolation and language barriers.</p>
+  <footer>
+    <a href="Citations.html">CITATION</a> | <a href="https://github.com/wangjarw/portfolio">GITHUB</a> | <p id="contact">CONTACT:sherry95jhw@gmail.com</p>
+  </footer>
 
-        <h2 class="project-section-title">Process</h2>
-        <p class="project-paragraph">After deciding our topic, the team conducted a collective empathy map interviews to randomly selected international students. These questions included what they were thinking, what they were actually saying and what I observed to avoid biased comments. This root cause analysis validated our initial concern and observations. After initial set of interviews, the team decided to brainstorm on proposals that could potentially resolve the language barrier issue and social isolation. Nevertheless, the team came up with ideas that were beneficial to the international student community that were already in Canada. During one of the follow-up interviews I had with an international student, I found out the team overlooked an important root cause of these anxiety issues: the negligence of international students who were planning to come to Canada. Hence, I brought up an idea of building an online virtual game using either VR or conventional game platform to tackle this issue. </p>
-
-        <figure>
-          <img src="image/brainstorm.png" class="project-image" alt="brainstorming image">
-          <figCaption>A photo of the brainstorming process with most team members voting on the game idea.</figCaption>
-        </figure>
-
-        <p class="project-paragraph">Later on, I conducted an online survey for to test our hypothesis and our potential solution. This survey not only included our target segment but also included a more general audience, other domestic students since social isolation was also an issue that a lot of the local students were facing. The survey result supported our proposal.</p>
-
-        <p class="project-paragraph">Inspired by Second Life, we proposed to offer all students to have access to this game. They could enter the virtual world to interact with different people and engage in school events. There was also an online chatting feature to help international students to mingle with domestic students.</p>
-        <figure>
-          <img src="image/gameMode.png" class="project-image" alt="game interface image">
-          <figCaption>A rough mockup of our imaginative game interface offering options for all students to interact and engage with school events.</figCaption>
-        </figure>
-
-        <h2 class="project-section-title">Challenge</h2>
-        <p class="project-paragraph">The biggest challenge for this project was the potential budget limitation and technological accessibility issues that were discovered through the business model canvas. Originally, we were thinking to actually build a VR platform to offer high presence engagement to familiarize more about Canada and the campus before landing. However, not everyone would have the tools and it would be too expensive to develop a 3D platform covering campus area. As results, the team decided to make this social game into a simpler multi-platform game where the students can control their avatars on common devices to explore environment around SFU.</p>
-
-        <h2 class="project-section-title ">Reflection</h2>
-        <p class="project-paragraph">This project was also pitched as a team in a community feedback session with simple imaginative game mock ups sketched by me to describe the concepts. The feedback we received for this project was improving our possible revenue stream and further developing the details of the game dynamics to retain the users. Overall the project was interesting enough. </p>
-
-        <figure>
-          <img src="image/communityFeedback.jpg" class="project-image" alt="a photo of the community feedback session">
-          <figCaption>A group photo during the community feedback session where industrial people and successful entrepreneurs came to give further suggestions on our proposal.</figCaption>
-        </figure>
-
-        <p class="project-paragraph">User research was the major thing that I learnt through this experience. When we are designing for an idea, we typically think the users would understand our intention so we neglect the thought of validating our proposed concept to our users. Hence, after this project, I had become more aware of user researches. </p>
-      </section>
-      <footer>
-        <a href="Style_guide.html">STYLEGUIDE</a> | <a href="Citations.html">CITATION</a> | <a href="https://github.com/wangjarw/portfolio">GITHUB</a> | <p id="contact">CONTACT:sherry95jhw@gmail.com</p>
-      </footer>
-
-    </body>
-    </html>
+</body>
+</html>
