--- a/portfolio/jhw_portfolio/virtual_reality.html
+++ b/portfolio/jhw_portfolio/virtual_reality.html
@@ -57,57 +57,37 @@
     <h3 class="project-paragraph in-para-overview-title">Time</h3>
     <p  class="project-paragraph">5 days</p>
     <h3 class="project-paragraph in-para-overview-title">Other Goals</h3>
-    <p  class="project-paragraph">Creating a casual VR golf game for people to relax themselves and experience futuristic golfing experience.</p>
+    <p  class="project-paragraph">Creating a casual VR golf game for people to relax themselves and experience futuristic golfing experience in 3.5 months.</p>
     <h3 class="project-paragraph in-para-overview-title">Other Roles</h3>
     <p  class="project-paragraph">sub environmental designer, asset modeller and user researcher.</p>
 
 
     <h2 class="project-section-title">Brief</h2>
-    <p class="project-paragraph first-paragraph">This was a school project for IAT 344, “Moving Images” where students were assigned to collaborate with real world clients and help them produce documentaries. Our group chose to work with the Museum of Vancouver. </p>
+    <p class="project-paragraph first-paragraph">This project was assigned in the course, <em>Immersive Environment</em> in which the student had to develop a virtual experience using the VR platform for the audience to feel a sense of high presence and engagement. Within this specific game project, one of my main roles was the videographer so that our VR experience can be documented for promoting VR technology.
+ </p>
 
-    <p class="project-paragraph"><em>The Wild Things</em> will be on display in late 2018 and will illustrate the positive relationship between human, technology and nature. After listening to the museum’s proposed concept, my team were interested in the opportunity to document the historical and cultural relationships between human and nature. Thus, we decided to film a documentary project on this topic. </p>
+    <p class="project-paragraph">Before diving into the videography part, the VR game development would be discussed briefly. This was my team’s first time developing a VR game using Oculus Rift. According to most of our members’ personal VR experiences, a lot of the games were experience based games. For instance, a roller coaster simulator game was played as a start up game for us during the class. Hence, the team thought it might be a good idea to build our game based on something real like a sport and add in more surprising features to excite the players. This was why we decided on the topic of building a golf game.</p>
+
+    <p class="project-paragraph"> After our ideation stage, my team wanted to create a golfing experience with the focus of having futuristic but beautifully made environment so that players can be more engaged with the experience. Instead of having to chase after the golf ball being hit, our programmers, Tamiko and Kenny thought it might be interesting to incorporate a teleportation mechanic for players to move around. This decision further minimized the chance of motion sickness of players. Nevertheless, our game strived to have a realistic physics, we conducted playtesting with the users. I made a rough draft of user testing questions and filmed the playtesting process to document the result. Through the process, my team found that due to the controller’s constraint, our players found it hard to map the controller to the real life golfing movement. Hence, I created a tutorial terrain in Unity with basic game mechanics features including teleportation, golf club respawn point and a camera playing the path of the golf ball. Lastly, I was also in charge of modelling some of the in game components in maya  including breakable crystal/rocks, cave and golf camera and looking for suitable pre-made models for the players to involve in the game.</p>
+
+
 
     <h2 class="project-section-title">Process</h2>
-    <p class="project-paragraph">Different from a scripted film, making a documentary requires a lot more planning due to the unpredictability of the filming location and content. In order to minimize the uncertainty, my team decided to schedule a museum tour to get familiarize what could be our centre of attention. Before visiting the museum, I led my team in a brainstorming process where we created a set of moodboards, possible documentary composition, pre-production questions and colour palettes that could prepare us to envision the story messages and goals. The idea of “the coexistence of both nature and urbanization” came into mind at this stage of the process which led us to have more spaces to discuss with the museum. </p>
+    <p class="project-paragraph">At almost the end of the semester, there were only 5 days left for us to film a VR game trailer that demonstrated the overall experience of the VR game we have been doing. I communicate with the team especially the programmers on what they wanted to showcase in the video. They considered it would be the best if the trailer could focus on the game mechanics and dynamics since they felt like showing the smooth physics that could been seen reflection of user feedback. In order to decrease the unpredictability and being able to film quickly, I outlined a simplified version of a shot list and a storyboard  for communication between the team mates.
+ </p>
 
     <figure>
       <img src="image/team_meeting.jpg" class="project-image" alt="a photo of our very first team meeting">
       <figCaption>This is a photo of the team trying to do the very first research about the topic.</figCaption>
     </figure>
 
-    <p class="project-paragraph">After visiting the museum and meeting with the museum curator, Viviane Gosslin, we were assigned taxidermy as a topic, due to the fact that there are fewer taxidermists than in the past. Thus,it would be valuable to document how people used to connect themselves to the nature and how taxidermy could be important in modern day context. In order to capture the positive message that the museum wanted us to portray, I led the group in creating guiding  questions for our upcoming interviews. How these questions were significant was that they helped us to form a cohesive message later on. At this stage, my team developed an overall message of an introduction to taxidermy and its values. </p>
-
-    <p class="project-paragraph">Moreover after my team had determined our list of questions, I began storyboarding our documentary. By doing this, it helped my team to understand how we could set up the equipment quickly and film the subjects with purposes. Since on the storyboard, there were annotation that reminded each of us to capture artefacts that could help building our topic. After the pre-production preparation, we then went to the museum to film. </p>
-
-    <p class="project-paragraph">Since the museum could only offer us up to 3 hours for filming in their storage room, we were only able to gather our footage into a rough cut during our first filming. Given our lack of footage, we request a second shooting time with the museum. I provided our shooting plan, consisting of potential artifacts that we could use to convey our desired message. I also provided our list of equipment that would help enhance the flow and composition of our film. In order to prevent accidents and uncertainty, I studied and practiced how to use the new equipment beforehand and coached the team to use them. </p>
-
-    <figure>
-      <img src="image/bw_note.png" class="project-image" alt="a photo of my shot list">
-      <figCaption>A photo of the guiding list that I used to remind the team what to focus on.</figCaption>
-    </figure>
-
-    <figure>
-      <img src="image/guiding_where_to_film.jpg" class="project-image" alt="a photo of my teammate, Justine, trying to capture some potential shots for our film">
-      <figCaption>A photo of my teammate, Justine, being reminded to capture some potential shots using the new equipment, glide cam.</figCaption>
-    </figure>
-
     <h2 class="project-section-title">Challenge</h2>
-    <p class="project-paragraph">I was responsible for post production (for example: colour correction and ensuring coherent content) while my teammates were in charge of editing and sound design.The challenge that we faced is that it was difficult for us to cut down the interview content and arrange them in a meaningful way. There were technical issues, for instance, cameras running out of batteries and dirty lens influencing the film quality that affect the amount of footages we could use. How we tried to tackle this issue was that we took a step back and re-watching all the salvageable footages and tried to arrange them following the guiding the questions that we had. We later on filled in the gap using the footages we shot during the second filming. Hence, this situation further emphasized the importance of pre-production preparation. </p>
+    <p class="project-paragraph">However, due to the fact that the school computer that was powerful enough run the VR game could not install any external recording software, the team had to rely on the programmers to record in game footage using their home desktops since they knew the best on how to set up the unity project. I had to make sure they understood the shot list and everything was captured due to the time constraints through constant communication.</p>
 
-    <figure>
-      <img src="image/double_checking_composition.jpg" class="project-image" alt="a photo of second shooting">
-      <figCaption>This is a photo of me making sure the quality of the footages to reduce further post-production issues.</figCaption>
-    </figure>
+      <p class="project-paragraph">Furthermore, on the filming outline, I considered it might be a good idea to feature user experience  in the trailer. Hence, I decided to film during the final showcase. The challenge here was that every team member was occupied by other tasks and this meant that I became the only person in charge of filming. It was actually difficult to manage everything at the same time with the presence of our guest players. Nevertheless, in order to minimize the chaos, I planned out beforehand on where to set up the camera and how i was going to film close-up shot to the players. Things turnt out under control during the showcase. </p>
 
     <h2 class="project-section-title">Reflection</h2>
-    <p class="project-paragraph">The first screening of the documentary was played in School of Interactive Art and Technology Festival in Yaletown Roundhouse community centre. It would later on be played in the museum for the exhibition. </p>
-
-    <figure>
-      <img src="image/showcase.jpg" class="project-image small-image" alt="a photo of the group on the day of showcase">
-      <figCaption>This is a group picture during the first screening showcase.</figCaption>
-    </figure>
-
-    <p class="project-paragraph">What I have learnt from the project is the importance of pre-production preparation since it is very crucial for my team to respond quickly according to the unpredictable circumstances that might happen during shooting and editing. Unpredictability indeed gave my team a lot of stress. After this project, I had learnt to be more flexible and understanding when facing technical issues, scheduling issues and team conflicts. </p>
+    <p class="project-paragraph">At the end, I used Premiere and After Effect to edit and adjust the footage by following the preproduction outline I created. The trailer being produced engaged many other guests and friends who were not able to play our game. The trailer was embedded in our team website and our VR experience was also being introduced on CBC news to promote VR applications. Through this experience, I learnt that time management, communication and pre-production were so important to maintain a better quality of the work. </p>
   </section>
 
 
