add intext link

--- a/portfolio/jhw_portfolio/virtual_reality.html
+++ b/portfolio/jhw_portfolio/virtual_reality.html
@@ -70,6 +70,9 @@
 
     <p class="project-paragraph"> After our ideation stage, my team wanted to create a golfing experience with the focus of having futuristic but beautifully made environment so that players can be more engaged with the experience. Instead of having to chase after the golf ball being hit, our programmers, Tamiko and Kenny thought it might be interesting to incorporate a teleportation mechanic for players to move around. This decision further minimized the chance of motion sickness of players. Nevertheless, our game strived to have a realistic physics, we conducted playtesting with the users. I made a rough draft of user testing questions and filmed the playtesting process to document the result. Through the process, my team found that due to the controller’s constraint, our players found it hard to map the controller to the real life golfing movement. Hence, I created a tutorial terrain in Unity with basic game mechanics features including teleportation, golf club respawn point and a camera playing the path of the golf ball. Lastly, I was also in charge of modelling some of the in game components in maya  including breakable crystal/rocks, cave and golf camera and looking for suitable pre-made models for the players to involve in the game.</p>
 
+     <a class="project-paragraph" src="https://kennycheung388.wixsite.com/sonicthemouse">
+       Process documentation website </a>
+
 
 
     <h2 class="project-section-title">Process</h2>
@@ -87,7 +90,7 @@
       <p class="project-paragraph">Furthermore, on the filming outline, I considered it might be a good idea to feature user experience  in the trailer. Hence, I decided to film during the final showcase. The challenge here was that every team member was occupied by other tasks and this meant that I became the only person in charge of filming. It was actually difficult to manage everything at the same time with the presence of our guest players. Nevertheless, in order to minimize the chaos, I planned out beforehand on where to set up the camera and how i was going to film close-up shot to the players. Things turnt out under control during the showcase. </p>
 
     <h2 class="project-section-title">Reflection</h2>
-    <p class="project-paragraph">At the end, I used Premiere and After Effect to edit and adjust the footage by following the preproduction outline I created. The trailer being produced engaged many other guests and friends who were not able to play our game. The trailer was embedded in our team website and our VR experience was also being introduced on CBC news to promote VR applications. Through this experience, I learnt that time management, communication and pre-production were so important to maintain a better quality of the work. </p>
+    <p class="project-paragraph">At the end, I used Premiere and After Effect to edit and adjust the footage by following the preproduction outline I created. The trailer being produced engaged many other guests and friends who were not able to play our game. The trailer was embedded in our team website and our VR experience was also being introduced on <a href="https://bc.ctvnews.ca/video?clipId=1373354">CBC news</a> to promote VR applications. Through this experience, I learnt that time management, communication and pre-production were so important to maintain a better quality of the work. </p>
   </section>
 
 
