update content to 2 new pages

--- a/portfolio/jhw_portfolio/community_poster.html
+++ b/portfolio/jhw_portfolio/community_poster.html
@@ -32,10 +32,10 @@
     <div class="overview-image-container">
 
       <div class="overview-item">
-        <h1 class="project-title">&rsaquo; Social Entrepreneurship</h1>
-        <h2 class="project-name overview-accent-color-two">Game proposal</h2>
+        <h1 class="project-title">&rsaquo; Poster Design</h1>
+        <h2 class="project-name overview-accent-color-two">Neighbourhood House Poster</h2>
         <h3 class="overview-subtitle">Role</h3>
-        <p  class="overview-description">designer and user researcher</p>
+        <p  class="overview-description">Volunteer Graphic Designer</p>
       </div>
 
       <div class="overview-item">
@@ -48,7 +48,7 @@
   <section>
     <h2  class="project-section-title first-paragraph first-title">Overview</h2>
     <h3  class="project-paragraph in-para-overview-title">Goal</h3>
-    <p class="project-paragraph ">Within school project context, propose a solution from a social entrepreneurial aspect alleviate social isolation and language barriers in international student community.</p>
+    <p class="project-paragraph ">Design a poster for new immigrant family and international students welcome event in Frog Hollow Neighbourhood House.</p>
     <h3 class="project-paragraph in-para-overview-title">Teammates</h3>
     <p class="project-paragraph ">Rami Tiwana, Maryam Imran, Azimaa Khan, Curtis Kwok</p>
     <h3 class="project-paragraph in-para-overview-title">Time</h3>
