--- a/portfolio/jhw_portfolio/project_display.html
+++ b/portfolio/jhw_portfolio/project_display.html
@@ -46,13 +46,12 @@
           <p class="project-description">social online game proposal</p>
         </div>
       </a>
-      <a href="#" class="project-item border-highlight-three">
+      <a href="virtual_reality.html" class="project-item border-highlight-three">
         <img src="image/boardgame.jpg" class="project-item-img" alt="empty project">
-        <div class="project-overlay">
+        <div class="project-overlay"></div>
           <div class="project-hover-text">
-            <p class="project-description">---</p>
+            <p class="project-description">VR game trailer</p>
           </div>
-        </div>
       </a>
       <a href="#" class="project-item border-highlight-one">
         <img src="image/taxidermy_ora.jpg" class="project-item-img" alt="empty project">
