--- a/portfolio/jhw_portfolio/community_poster.html
+++ b/portfolio/jhw_portfolio/community_poster.html
@@ -49,43 +49,44 @@
     <h2  class="project-section-title first-paragraph first-title">Overview</h2>
     <h3  class="project-paragraph in-para-overview-title">Goal</h3>
     <p class="project-paragraph ">Design a poster for new immigrant family and international students welcome event in Frog Hollow Neighbourhood House.</p>
-    <h3 class="project-paragraph in-para-overview-title">Teammates</h3>
-    <p class="project-paragraph ">Rami Tiwana, Maryam Imran, Azimaa Khan, Curtis Kwok</p>
     <h3 class="project-paragraph in-para-overview-title">Time</h3>
-    <p class="project-paragraph ">1.5 months</p>
+    <p class="project-paragraph ">3 weeks</p>
 
     <h2 class="project-section-title">Brief</h2>
-    <p class="project-paragraph first-paragraph">This project was given as a school project in the business course, <em>Introduction to Entrepreneurship and Innovation</em>. The course itself encouraged interdisciplinary collaboration so most of students participated in the course were from different majors. This context allowed me to work with people who had zero design background. Hence, as a designer, I would have to communicate and convince a group of lay audience about basic understanding of design and technological tools. </p>
-    <p class="project-paragraph">For this project specifically, the goal was to propose an entrepreneurial solution to a social issue that we considered was important enough. Due to all of our team members including me coming from diverse backgrounds and I was once an international student peer mentor, I advocated to promote international students’ experience in school. So at the end, the team agreed to tackle international/ immigrant student issues such as social isolation and language barriers.</p>
+    <p class="project-paragraph first-paragraph">As an immigrant myself, I have strived to engage and assist new immigrants as well as international students. Thus, I volunteered at Frog Hollow Neighbourhood House which had several newcomer assistance programs that constantly hold community activities and events to involve them into the neighbourhood. Within the volunteer team, I mainly worked for their preteen and youth program and I would like to highlight the poster design for main summer community event.</p>
+
 
     <h2 class="project-section-title">Process</h2>
-    <p class="project-paragraph">After deciding our topic, the team conducted a collective empathy map interviews to randomly selected international students. These questions included what they were thinking, what they were actually saying and what I observed to avoid biased comments. This root cause analysis validated our initial concern and observations. After initial set of interviews, the team decided to brainstorm on proposals that could potentially resolve the language barrier issue and social isolation. Nevertheless, the team came up with ideas that were beneficial to the international student community that were already in Canada. During one of the follow-up interviews I had with an international student, I found out the team overlooked an important root cause of these anxiety issues: the negligence of international students who were planning to come to Canada. Hence, I brought up an idea of building an online virtual game using either VR or conventional game platform to tackle this issue. </p>
+    <p class="project-paragraph">The target audience were mainly preteen and young teenager. I conducted some quick search online on what other designers did when they wanted draw their attention to the poster. It turnt out most of the posters were bright and colourful that highlighted positive vibe which was important to this community event since we wanted newcomer children to have great connections and experiences with the neighbourhood house.</p>
 
     <figure>
       <img src="image/brainstorm.png" class="project-image" alt="brainstorming image">
       <figCaption>A photo of the brainstorming process with most team members voting on the game idea.</figCaption>
     </figure>
 
-    <p class="project-paragraph">Later on, I conducted an online survey for to test our hypothesis and our potential solution. This survey not only included our target segment but also included a more general audience, other domestic students since social isolation was also an issue that a lot of the local students were facing. The survey result supported our proposal.</p>
+    <p class="project-paragraph">Being influenced and inspired greatly by Paul Rand, I also did research on his style again to see how he handled elements and arranged them playfully. Afterwards, I started sketching and tested out vibrant colour scheme for this specific audience. Sketches were then being brought into Illustrator.</p>
 
-    <p class="project-paragraph">Inspired by Second Life, we proposed to offer all students to have access to this game. They could enter the virtual world to interact with different people and engage in school events. There was also an online chatting feature to help international students to mingle with domestic students.</p>
+    <p class="project-paragraph">I typically worked from home and the main communication method between the program coordinator and me was usually through emails since she was very busy and seldom had time to discuss in person. In order to communicate effectively about my design progress and decisions clearly, I often would include quick sketches or image files that highlight main design stages that the coordinator could look at and give me feedback. This form of communication demonstrate how I was able to explain my design ideas to a lay audience and able to negotiate and plan the process. </p>
     <figure>
       <img src="image/gameMode.png" class="project-image" alt="game interface image">
       <figCaption>A rough mockup of our imaginative game interface offering options for all students to interact and engage with school events.</figCaption>
     </figure>
 
-    <h2 class="project-section-title">Challenge</h2>
-    <p class="project-paragraph">The biggest challenge for this project was the potential budget limitation and technological accessibility issues that were discovered through the business model canvas. Originally, we were thinking to actually build a VR platform to offer high presence engagement to familiarize more about Canada and the campus before landing. However, not everyone would have the tools and it would be too expensive to develop a 3D platform covering campus area. As results, the team decided to make this social game into a simpler multi-platform game where the students can control their avatars on common devices to explore environment around SFU.</p>
+    <h2 class="project-section-title">Challenges</h2>
+    <p class="project-paragraph">Audience typically did not spend much time on a poster for too long; however the amount of the information that the coordinator gave me was a lot. In order to make a concise poster for the audience to quickly understand what this poster was about, I contacted the coordinator and discussed with her about the idea of shorten the information. I also made an effort in strategizing the content and highlight them with hierarchy on poster.
+    </p>
+
+    <p class="project-paragraph">Moreover, since the event was sponsored by the government, every poster that I created should include several government logos on it. Unfortunately, the image files that the coordinator provided me were in jpg file with a white background and low resolution. Thus, it was difficult to remove the clean the image file perfectly. As results, I left white spaces at the bottom of the poster to make the sponsored logo stand out as a solution coping with low resolution image issue. </p>
 
     <h2 class="project-section-title ">Reflection</h2>
-    <p class="project-paragraph">This project was also pitched as a team in a community feedback session with simple imaginative game mock ups sketched by me to describe the concepts. The feedback we received for this project was improving our possible revenue stream and further developing the details of the game dynamics to retain the users. Overall the project was interesting enough. </p>
+    <p class="project-paragraph">At the end, the poster was printed and posted in the neighbourhood and Anne Hebert Annex School to attract people to come. Because of this poster project’s success, other community program coordinators had asked me to help with their project promotions, including the career exploration day for the near Van Tech Secondary School. At the end of the year, I was awarded with a certificate of recognition from the House of Common.</p>
 
     <figure>
       <img src="image/communityFeedback.jpg" class="project-image" alt="a photo of the community feedback session">
       <figCaption>A group photo during the community feedback session where industrial people and successful entrepreneurs came to give further suggestions on our proposal.</figCaption>
     </figure>
 
-    <p class="project-paragraph">User research was the major thing that I learnt through this experience. When we are designing for an idea, we typically think the users would understand our intention so we neglect the thought of validating our proposed concept to our users. Hence, after this project, I had become more aware of user researches. </p>
+    <p class="project-paragraph">I had learnt from this volunteer experience is that I should try to compile an image or design folders for the future design volunteers or even the program coordinator so that they did not have to deal with low-resolution image files and limited amount of photo archives. I believe if I did this at the time, it could save us more time on looking for the right images that related to the events.</p>
   </section>
   <footer>
     <a href="Style_guide.html">STYLEGUIDE</a> | <a href="Citations.html">CITATION</a> | <a href="https://github.com/wangjarw/portfolio">GITHUB</a> | <p id="contact">CONTACT:sherry95jhw@gmail.com</p>
