--- a/portfolio/jhw_portfolio/healthy_eating_poster.html
+++ b/portfolio/jhw_portfolio/healthy_eating_poster.html
@@ -48,37 +48,27 @@
   <section>
     <h2  class="project-section-title first-paragraph first-title">Overview</h2>
     <h3  class="project-paragraph in-para-overview-title">Goal</h3>
-    <p class="project-paragraph ">Within school project context, propose a solution from a social entrepreneurial aspect alleviate social isolation and language barriers in international student community.</p>
+    <p class="project-paragraph "> design a health related poster using assigned design style.</p>
     <h3 class="project-paragraph in-para-overview-title">Teammates</h3>
-    <p class="project-paragraph ">Rami Tiwana, Maryam Imran, Azimaa Khan, Curtis Kwok</p>
+    <p class="project-paragraph ">Annette Cheung and Liam Flemming</p>
     <h3 class="project-paragraph in-para-overview-title">Time</h3>
-    <p class="project-paragraph ">1.5 months</p>
+    <p class="project-paragraph ">1 month</p>
 
     <h2 class="project-section-title">Brief</h2>
-    <p class="project-paragraph first-paragraph">This project was given as a school project in the business course, <em>Introduction to Entrepreneurship and Innovation</em>. The course itself encouraged interdisciplinary collaboration so most of students participated in the course were from different majors. This context allowed me to work with people who had zero design background. Hence, as a designer, I would have to communicate and convince a group of lay audience about basic understanding of design and technological tools. </p>
-    <p class="project-paragraph">For this project specifically, the goal was to propose an entrepreneurial solution to a social issue that we considered was important enough. Due to all of our team members including me coming from diverse backgrounds and I was once an international student peer mentor, I advocated to promote international students’ experience in school. So at the end, the team agreed to tackle international/ immigrant student issues such as social isolation and language barriers.</p>
+    <p class="project-paragraph first-paragraph">This project was an academic project for the course <em>Graphic Design</em>. Health had been a crucial topic. Hence, the instructor considered it might be a good idea for us to dive into health related topics. Since this course was an introductory graphic design course, in order to help us learn the basic design knowledge, we were asked to do research on different design styles during different areas. At the end, we were assigned to research on the New York school style and to be more specific, Paul Rand was being researched. </p>
 
     <h2 class="project-section-title">Process</h2>
-    <p class="project-paragraph">After deciding our topic, the team conducted a collective empathy map interviews to randomly selected international students. These questions included what they were thinking, what they were actually saying and what I observed to avoid biased comments. This root cause analysis validated our initial concern and observations. After initial set of interviews, the team decided to brainstorm on proposals that could potentially resolve the language barrier issue and social isolation. Nevertheless, the team came up with ideas that were beneficial to the international student community that were already in Canada. During one of the follow-up interviews I had with an international student, I found out the team overlooked an important root cause of these anxiety issues: the negligence of international students who were planning to come to Canada. Hence, I brought up an idea of building an online virtual game using either VR or conventional game platform to tackle this issue. </p>
-
-    <figure>
-      <img src="image/brainstorm.png" class="project-image" alt="brainstorming image">
-      <figCaption>A photo of the brainstorming process with most team members voting on the game idea.</figCaption>
-    </figure>
-
-    <p class="project-paragraph">Later on, I conducted an online survey for to test our hypothesis and our potential solution. This survey not only included our target segment but also included a more general audience, other domestic students since social isolation was also an issue that a lot of the local students were facing. The survey result supported our proposal.</p>
-
-    <p class="project-paragraph">Inspired by Second Life, we proposed to offer all students to have access to this game. They could enter the virtual world to interact with different people and engage in school events. There was also an online chatting feature to help international students to mingle with domestic students.</p>
-    <figure>
-      <img src="image/gameMode.png" class="project-image" alt="game interface image">
-      <figCaption>A rough mockup of our imaginative game interface offering options for all students to interact and engage with school events.</figCaption>
-    </figure>
+    <p class="project-paragraph">Before doing research, the team first decided to focus on the topic of healthy eating for this health related poster since this topic was more relevant to student community. After having this agreement, each of us splitted up to do individual research and observation on Paul Rand’s style. Most of us noticed the same things: Paul Rand’s liked to focus on solid and bold colours. Irregular blocky shapes and diagonal placement were also his style. Hence, the team splitted again to ideate new ideas based these observations.</p>
 
     <h2 class="project-section-title">Challenge</h2>
-    <p class="project-paragraph">The biggest challenge for this project was the potential budget limitation and technological accessibility issues that were discovered through the business model canvas. Originally, we were thinking to actually build a VR platform to offer high presence engagement to familiarize more about Canada and the campus before landing. However, not everyone would have the tools and it would be too expensive to develop a 3D platform covering campus area. As results, the team decided to make this social game into a simpler multi-platform game where the students can control their avatars on common devices to explore environment around SFU.</p>
+    <p class="project-paragraph">Unlike Annette who had design background, this was my first time learning about design and using Illustrator for design. I only had experiences in using Photoshop before for digital painting. Nonetheless, in order to achieve the sharp edges that Paul Rand always had since his signature style was colourful collages. There was not much time left for the project and we needed to come up with one finalized design before our next team meeting, I self learnt illustrator with my primary experiences of using photoshop. Although the I was not very familiar with Illustrator, I spent an afternoon learning all the basics and was able to design a rough poster for the team meeting. </p>
+
+    <p class="project-paragraph">After each of us designing a poster, we brought the posters together and examine which one could be brought forward. Although we designed our own poster with the same guidelines, each of us had different interpretations on how to implement them. This situation led to a problem where it was hard to decide which poster should be chosen to carry on. In order to push the design process, I kindly asked other people to vote on three of our posters and my poster was chosen because people liked the colour contrast which made the poster memorable. Although my poster was chosen, I was willing to incorporate my teammates’ own interpretation of the style into my design. This incorporation included toning down the colour contrast and using yellow to highlight the advantages and the bright side of eating healthy.</p>
 
     <h2 class="project-section-title ">Reflection</h2>
-    <p class="project-paragraph">This project was also pitched as a team in a community feedback session with simple imaginative game mock ups sketched by me to describe the concepts. The feedback we received for this project was improving our possible revenue stream and further developing the details of the game dynamics to retain the users. Overall the project was interesting enough. </p>
+    <p class="project-paragraph">This project actually has influenced my design style and preference since then. It helped me to build the skills to design and refer to the best example before ideating. Able to observe and internalize the learnt knowledge was what I learnt which further assists me to adapt in unfamiliar design circumstances where would always research before breaking ground rules. </p>
+
+    <p class="project-paragraph">Additionally, this project also taught me how to conduct effective communications with other people and how to create a more inclusive team. One of my teammates, Liam was not a very talkative person so it was always difficult for him to present his ideas in front of us. This project gave me the chance to discover different ways to approach this type of teammate including talking to him personally and encouraging him to talk in the meetings. </p>
 
     <figure>
       <img src="image/communityFeedback.jpg" class="project-image" alt="a photo of the community feedback session">
