--- a/portfolio/jhw_portfolio/project_display.html
+++ b/portfolio/jhw_portfolio/project_display.html
@@ -39,13 +39,13 @@
           <p class="project-description">documentary</p>
         </div>
       </a>
-      <a href="game_proposal.html" class="project-item border-highlight-two">
+      <!-- <a href="game_proposal.html" class="project-item border-highlight-two">
         <img src="image/project_gamePro.jpg" class="project-item-img" alt="Game Proposal">
         <div class="project-overlay"></div>
         <div class="project-hover-text">
           <p class="project-description">social online game proposal</p>
         </div>
-      </a>
+      </a> -->
       <a href="virtual_reality.html" class="project-item border-highlight-three">
         <img src="image/boardgame.jpg" class="project-item-img" alt="empty project">
         <div class="project-overlay"></div>
@@ -69,14 +69,14 @@
           </div>
         </div>
       </a>
-      <a href="#" class="project-item border-highlight-three">
+      <!-- <a href="#" class="project-item border-highlight-three">
         <img src="image/taxidermy_red.jpg" class="project-item-img" alt="empty project">
         <div class="project-overlay">
           <div class="project-hover-text">
             <p>----</p>
           </div>
         </div>
-      </a>
+      </a> -->
     </div>
   </section>
 
