adjust project display

--- a/portfolio/jhw_portfolio/project_display.html
+++ b/portfolio/jhw_portfolio/project_display.html
@@ -53,7 +53,7 @@
             <p class="project-description">VR game trailer</p>
           </div>
       </a>
-      <a href="#" class="project-item border-highlight-one">
+      <a href="healthy_eating_poster.html" class="project-item border-highlight-one">
         <img src="image/taxidermy_ora.jpg" class="project-item-img" alt="empty project">
         <div class="project-overlay">
           <div class="project-hover-text">
@@ -61,7 +61,7 @@
           </div>
         </div>
       </a>
-      <a href="#" class="project-item border-highlight-two">
+      <a href="community_poster.html" class="project-item border-highlight-two">
         <img src="image/taxidermy_gree.jpg" class="project-item-img" alt="empty project">
         <div class="project-overlay">
           <div class="project-hover-text">
