--- a/portfolio/jhw_portfolio/portfolio.html
+++ b/portfolio/jhw_portfolio/portfolio.html
@@ -33,7 +33,7 @@
     <div class="short-intro-container">
       <div class="short-intro-item">
         <h1 class="chinese-name intro-title" lang="zh-Hant">Hello! 你好!</h1>
-        <p class="intro-description">This is Jar Hsuan Wang who is an enthusiastic Taiwanese born <em id="intro-emphasis">content strategist</em> living in Vanvouver, Canada. I believe that things can be examined and improved through different design lens. And I am here to help you building up the content and values!</p>
+        <p class="intro-description">This is Jar Hsuan Wang or Sherry Wang who is an enthusiastic Taiwanese born <em class="intro-emphasis">visual designer and videographer</em> living in Vanvouver, Canada. </p>
       </div>
     </div>
     <div>
@@ -49,6 +49,13 @@
       <h2 class="recent-project-name">Recent Projects</h2>
 
       <div class="recent-project-container">
+        <a href="community_poster.html" class="recent-project-item border-highlight-two">
+          <img src="image/project_gamePro.jpg" class="recent-project-item-img" alt="Game Proposal">
+          <div class="project-overlay"></div>
+          <div class="project-hover-text">
+            <p class="project-description">poster design</p>
+          </div>
+        </a>
         <a href="taxidermy.html" class="recent-project-item border-highlight-one">
           <div class = "project-img-container">
             <img src="image/project_taxidermy.png" class="recent-project-item-img" alt="Videography:Taxidermy">
@@ -56,13 +63,6 @@
           <div class="project-overlay"></div>
           <div class="project-hover-text">
             <p class="project-description">taxidermy documentary</p>
-          </div>
-        </a>
-        <a href="game_proposal.html" class="recent-project-item border-highlight-two">
-          <img src="image/project_gamePro.jpg" class="recent-project-item-img" alt="Game Proposal">
-          <div class="project-overlay"></div>
-          <div class="project-hover-text">
-            <p class="project-description">social game proposal</p>
           </div>
         </a>
       </div>
