--- a/portfolio/jhw_portfolio/about.html
+++ b/portfolio/jhw_portfolio/about.html
@@ -10,11 +10,11 @@
   <link href="css/portfolio_flexbox.css" rel="stylesheet">
 
   <!-- for reading -->
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Amiri" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Amiri" rel="stylesheet">
 
-    <!-- for nav -->
-    <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+  <!-- for nav -->
+  <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
 
 </head>
 
@@ -31,15 +31,21 @@
 
   <section>
     <div class="about-container">
-        <div class="about-item about-text">
-          <img id="photo_one" src="image/photoTwo.jpg" alt="my photo">
-          <h2>Bio</h2>
-          <p class="about-para">My name is Jar Hsuan Sherry Wang , a Taiwanese born content strategist who is passionate about utilizing different forms of media platforms to promote and raise awareness of different social topics. Focusing on media art, I mainly explore on graphic design, game design, UX/UI design, videography and virtual reality to represent ideas in an effective way. In different projects, I am mainly in charge of storyboarding, content analysis, ensuring meaningful project goals and pinpointing problems by giving thoughtful suggestions.
-          </p>
-          <p class="about-para">I strive to push myself to use emerging technology (like VR) to construct messages with the understanding of design principles and  integration of other disciplines like UX/UI design, game design, graphic design and videography.
-          </p>
-          <h2>Interests</h2>
-          <p class="about-para">I am interested in doing user research, project management, concept ideation, reiteration using storybroading, sketching and relevant design tools such as adobe suites and html/css, unity to visualize experience, mock ups and prototypes. Hence, any position that is related to project assuring, envisioning and planning would be favourable.</p>
+      <div class="about-item about-text">
+        <img id="photo_one" src="image/photoTwo.jpg" alt="my photo">
+        <h2>Bio</h2>
+        <p class="about-para">I am a <em class="intro-emphasis">visual designer with a strong interest in doing graphic design and videography </em> using Adobe Suites. Born with a
+          Taiwanese background, I value the idea of multiculturalism. Hence, I have several design experiences
+          with organizations and programs who mainly work with international newcomers. During the design
+          process, I am interested in <em class="intro-emphasis">doing research, content strategy, storytelling through sketching or illustrations, storyboarding and project management.</em>
+        </p>
+        <p class="about-para">My current goal is to <em class="intro-emphasis">learn more about UX/UI design, web design (html/css) and game design (java and Unity)</em> that can potentially enriches myself as a designer. <em class="intro-emphasis">This website is actually coded by myself </em>and I am still really passionate on learning more about this design field.
+        </p>
+        <h2>Interests</h2>
+        <p class="about-para">I am in love with teaching and learning along with other people. Hence, I have several experiences in teaching, 
+          including being a teaching assistant and participating in school funded Techbyte team which is a program that
+          engages new designers to learn design software and programming. Moreover, I am also passionate in learning
+          about different cultures. Currently, I am self learning Japanese and Korean.</p>
         </div>
         <div class="about-item about-img">
           <img id="photo_two" src="image/photoOne.jpg" alt="my photo">
@@ -47,9 +53,9 @@
       </div>
     </section>
 
-      <footer>
-          <a href="Style_guide.html">STYLEGUIDE</a> | <a href="Citations.html">CITATION</a> | <a href="https://github.com/wangjarw/portfolio">GITHUB</a> | <p id="contact">CONTACT:sherry95jhw@gmail.com</p>
-      </footer>
+    <footer>
+      <a href="Style_guide.html">STYLEGUIDE</a> | <a href="Citations.html">CITATION</a> | <a href="https://github.com/wangjarw/portfolio">GITHUB</a> | <p id="contact">CONTACT:sherry95jhw@gmail.com</p>
+    </footer>
 
-    </body>
-    </html>
+  </body>
+  </html>
