including images and change border colour

--- a/portfolio/jhw_portfolio/community_poster.html
+++ b/portfolio/jhw_portfolio/community_poster.html
@@ -39,7 +39,7 @@
       </div>
 
       <div class="overview-item">
-        <img src="image/gamePro.jpg" class="overview-image-item" alt="a photo of the group on the day of showcase">
+        <img src="image/community_poster_mockup.jpg" class="overview-image-item" alt="a photo of the group on the day of showcase">
       </div>
     </div>
   </section>
