--- a/portfolio/jhw_portfolio/portfolio.html
+++ b/portfolio/jhw_portfolio/portfolio.html
@@ -49,11 +49,11 @@
       <h2 class="recent-project-name">Recent Projects</h2>
 
       <div class="recent-project-container">
-        <a href="community_poster.html" class="recent-project-item border-highlight-two">
-          <img src="image/project_gamePro.jpg" class="recent-project-item-img" alt="Game Proposal">
+        <a href="community_poster.html" class="recent-project-item border-highlight-three">
+          <img src="image/community_poster.jpg" class="recent-project-item-img" alt="community poster">
           <div class="project-overlay"></div>
           <div class="project-hover-text">
-            <p class="project-description">poster design</p>
+            <p class="project-description">community poster design</p>
           </div>
         </a>
         <a href="taxidermy.html" class="recent-project-item border-highlight-one">
