--- a/portfolio/jhw_portfolio/project_display.html
+++ b/portfolio/jhw_portfolio/project_display.html
@@ -47,22 +47,23 @@
         </div>
       </a> -->
       <a href="virtual_reality.html" class="project-item border-highlight-four">
-        <img src="image/boardgame.jpg" class="project-item-img" alt="empty project">
+        <img src="image/VR_trailer.jpg" class="project-item-img" alt="VR trailer">
         <div class="project-overlay"></div>
           <div class="project-hover-text">
             <p class="project-description">VR game trailer</p>
           </div>
       </a>
-      <a href="healthy_eating_poster.html" class="project-item border-highlight-three">
-        <img src="image/taxidermy_ora.jpg" class="project-item-img" alt="empty project">
+      <a href="community_poster.html" class="project-item border-highlight-three">
+        <img src="image/community_poster.jpg" class="project-item-img" alt="community poster">
         <div class="project-overlay">
           <div class="project-hover-text">
-            <p>---</p>
+            <p>community poster design</p>
           </div>
         </div>
       </a>
-      <a href="community_poster.html" class="project-item border-highlight-two">
-        <img src="image/taxidermy_gree.jpg" class="project-item-img" alt="empty project">
+
+      <a href="healthy_eating_poster.html" class="project-item border-highlight-two">
+        <img src="image/taxidermy_ora.jpg" class="project-item-img" alt="healthy eating poster">
         <div class="project-overlay">
           <div class="project-hover-text">
             <p>---</p>
