--- a/portfolio/jhw_portfolio/healthy_eating_poster.html
+++ b/portfolio/jhw_portfolio/healthy_eating_poster.html
@@ -32,10 +32,10 @@
     <div class="overview-image-container">
 
       <div class="overview-item">
-        <h1 class="project-title">&rsaquo; Social Entrepreneurship</h1>
-        <h2 class="project-name overview-accent-color-two">Game proposal</h2>
+        <h1 class="project-title">&rsaquo; Healthy Eating Poster</h1>
+        <h2 class="project-name overview-accent-color-two">New York Styled poster</h2>
         <h3 class="overview-subtitle">Role</h3>
-        <p  class="overview-description">designer and user researcher</p>
+        <p  class="overview-description">graphic designer and researcher</p>
       </div>
 
       <div class="overview-item">
