--- a/portfolio/jhw_portfolio/healthy_eating_poster.html
+++ b/portfolio/jhw_portfolio/healthy_eating_poster.html
@@ -39,7 +39,7 @@
       </div>
 
       <div class="overview-item">
-        <img src="image/gamePro.jpg" class="overview-image-item" alt="a photo of the group on the day of showcase">
+        <img src="image/healthy_eating_poster.jpg" class="overview-image-item" alt="poster comparison">
       </div>
     </div>
   </section>
