--- a/portfolio/jhw_portfolio/project_display.html
+++ b/portfolio/jhw_portfolio/project_display.html
@@ -63,10 +63,10 @@
       </a>
 
       <a href="healthy_eating_poster.html" class="project-item border-highlight-two">
-        <img src="image/taxidermy_ora.jpg" class="project-item-img" alt="healthy eating poster">
+        <img src="image/healthy_eating_mockup.jpg" class="project-item-img" alt="healthy eating poster">
         <div class="project-overlay">
           <div class="project-hover-text">
-            <p>---</p>
+            <p>healthy eating poster deisgn</p>
           </div>
         </div>
       </a>
