--- a/portfolio/jhw_portfolio/Citations.html
+++ b/portfolio/jhw_portfolio/Citations.html
@@ -59,20 +59,20 @@
 
 
 
-      <!-- <section id="images">
+      <section id="images">
 
       <h2>Images</h2>
 
       <ul class="citations">
       <li>
-      <cite>Isagenix </cite>. Comapny. (n/a). <strong>RejuvityEssential Youth Serum</strong> [Website]. Retrieved from <a href="https://www.isagenix.com/en-ca/products/more-products">[URL]</a>.
-    </li>
+      <cite>HOUSE METHOD </cite>. Comapny. (n/a). <strong>Wall Image</strong> [Website]. Retrieved from <a href="https://housemethod.com/painting-staining/5-wall-texture-techniques-for-your-home/">[URL]</a>.
+    <!-- </li>
     <li>
     <cite>Isagenix </cite>. Comapny. (n/a). <strong>Rejuvity Moisturizing Day Cream</strong> [Website]. Retrieved from <a href="https://www.isagenix.com/en-ca/products/more-products">[URL]</a>.
-  </li>
-</ul> -->
+  </li> -->
+</ul>
 
-<!-- </section> -->
+ </section>
 
 
 
