--- a/portfolio/jhw_portfolio/about.html
+++ b/portfolio/jhw_portfolio/about.html
@@ -42,7 +42,7 @@
         <p class="about-para">My current goal is to <em class="intro-emphasis">learn more about UX/UI design, web design (html/css) and game design (java and Unity)</em> that can potentially enriches myself as a designer. <em class="intro-emphasis">This website is actually coded by myself </em>and I am still really passionate on learning more about this design field.
         </p>
         <h2>Interests</h2>
-        <p class="about-para">I am in love with teaching and learning along with other people. Hence, I have several experiences in teaching, 
+        <p class="about-para">I am in love with teaching and learning along with other people. Hence, I have several experiences in teaching,
           including being a teaching assistant and participating in school funded Techbyte team which is a program that
           engages new designers to learn design software and programming. Moreover, I am also passionate in learning
           about different cultures. Currently, I am self learning Japanese and Korean.</p>
@@ -54,7 +54,7 @@
     </section>
 
     <footer>
-      <a href="Style_guide.html">STYLEGUIDE</a> | <a href="Citations.html">CITATION</a> | <a href="https://github.com/wangjarw/portfolio">GITHUB</a> | <p id="contact">CONTACT:sherry95jhw@gmail.com</p>
+      <a href="#">RESUME</a> | <a href="Citations.html">CITATION</a> | <a href="https://github.com/wangjarw/portfolio">GITHUB</a> | <p id="contact">CONTACT:sherry95jhw@gmail.com</p>
     </footer>
 
   </body>
