--- a/portfolio/jhw_portfolio/project_display.html
+++ b/portfolio/jhw_portfolio/project_display.html
@@ -82,7 +82,7 @@
   </section>
 
   <footer>
-  <a href="Style_guide.html">STYLEGUIDE</a> | <a href="Citations.html">CITATION</a> | <a href="https://github.com/wangjarw/portfolio">GITHUB</a> | <p id="contact">CONTACT:sherry95jhw@gmail.com</p>
+  <a href="#">RESUME</a> | <a href="Citations.html">CITATION</a> | <a href="https://github.com/wangjarw/portfolio">GITHUB</a> | <p id="contact">CONTACT:sherry95jhw@gmail.com</p>
   </footer>
 </body>
 </html>
