fix intext link

--- a/portfolio/jhw_portfolio/virtual_reality.html
+++ b/portfolio/jhw_portfolio/virtual_reality.html
@@ -70,7 +70,7 @@
 
     <p class="project-paragraph"> After our ideation stage, my team wanted to create a golfing experience with the focus of having futuristic but beautifully made environment so that players can be more engaged with the experience. Instead of having to chase after the golf ball being hit, our programmers, Tamiko and Kenny thought it might be interesting to incorporate a teleportation mechanic for players to move around. This decision further minimized the chance of motion sickness of players. Nevertheless, our game strived to have a realistic physics, we conducted playtesting with the users. I made a rough draft of user testing questions and filmed the playtesting process to document the result. Through the process, my team found that due to the controller’s constraint, our players found it hard to map the controller to the real life golfing movement. Hence, I created a tutorial terrain in Unity with basic game mechanics features including teleportation, golf club respawn point and a camera playing the path of the golf ball. Lastly, I was also in charge of modelling some of the in game components in maya  including breakable crystal/rocks, cave and golf camera and looking for suitable pre-made models for the players to involve in the game.</p>
 
-    <a class="paragraph-in-text" src="https://kennycheung388.wixsite.com/sonicthemouse">
+    <a href ="https://kennycheung388.wixsite.com/sonicthemouse" class="paragraph-in-text">
       Click here to see process documentation website </a>
 
 
